--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ if (BUILD_TESTING)
 
     add_executable(oaknut-tests
         tests/_feature_detect.cpp
+        tests/amx.cpp
         tests/basic.cpp
         tests/fpsimd.cpp
         tests/general.cpp
