--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,12 +2,12 @@ on: [push, pull_request]
 
 jobs:
   test_on_ubuntu:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     name: g++-10 (aarch64)
 
     steps:
       - name: Checkout oaknut repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Update package repositories
         run: sudo apt-get update
@@ -21,10 +21,10 @@ jobs:
           qemu-user
 
       - name: Checkout qemu
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: qemu/qemu
-          ref: v8.1.2
+          ref: v9.1.0
           path: externals/qemu
 
       - name: Build qemu
@@ -37,10 +37,10 @@ jobs:
           make -j4 qemu-aarch64
 
       - name: Checkout Catch2 v3 repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: catchorg/Catch2
-          ref: v3.2.0
+          ref: v3.7.0
           path: externals/catch
 
       - name: Configure CMake
@@ -68,13 +68,13 @@ jobs:
 
     steps:
       - name: Checkout oaknut repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Checkout Catch2 v3 repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: catchorg/Catch2
-          ref: v3.2.0
+          ref: v3.7.0
           path: externals/catch
 
       - name: Setup msvc-arm64 environment
@@ -99,13 +99,13 @@ jobs:
 
     steps:
       - name: Checkout oaknut repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Checkout Catch2 v3 repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: catchorg/Catch2
-          ref: v3.2.0
+          ref: v3.7.0
           path: externals/catch
 
       - name: Install dependencies
@@ -125,19 +125,19 @@ jobs:
         run: cmake --build . --config Release
 
   test_on_freebsd:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     name: freebsd-arm64
 
     steps:
       - name: Checkout oaknut repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Build and Test
-        uses: cross-platform-actions/action@v0.19.1
+        uses: cross-platform-actions/action@v0.25.0
         with:
           operating_system: freebsd
           architecture: arm64
-          version: '13.2'
+          version: '14.1'
           shell: bash
           run: |
             pwd
@@ -149,19 +149,19 @@ jobs:
             ./oaknut-tests -d yes
 
   test_on_openbsd:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     name: openbsd-arm64
 
     steps:
       - name: Checkout oaknut repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Build and Test
-        uses: cross-platform-actions/action@v0.19.1
+        uses: cross-platform-actions/action@v0.25.0
         with:
           operating_system: openbsd
           architecture: arm64
-          version: '7.3'
+          version: '7.5'
           shell: bash
           run: |
             pwd
@@ -172,12 +172,12 @@ jobs:
             ./oaknut-tests -d yes "~[slow]"
 
   test_on_android:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     name: android
 
     steps:
       - name: Checkout oaknut repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Update package repositories
         run: sudo apt-get update
@@ -186,10 +186,10 @@ jobs:
         run: sudo apt-get install -q -y ninja-build
 
       - name: Checkout Catch2 v3 repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: catchorg/Catch2
-          ref: v3.2.0
+          ref: v3.7.0
           path: externals/catch
 
       - name: Configure CMake
@@ -209,24 +209,24 @@ jobs:
         run: cmake --build . --config Release
 
   x86_64:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     name: x86_64
 
     steps:
       - name: Checkout oaknut repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Update package repositories
         run: sudo apt-get update
 
       - name: Install dependencies
-        run: sudo apt-get install -q -y ninja-build
+        run: sudo apt-get install -q -y ninja-build gcc-14 g++-14
 
       - name: Checkout Catch2 v3 repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: catchorg/Catch2
-          ref: v3.2.0
+          ref: v3.7.0
           path: externals/catch
 
       - name: Configure CMake
