--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 jobs:
   test_on_ubuntu:
     runs-on: ubuntu-24.04
-    name: g++-10 (aarch64)
+    name: g++-14 (aarch64)
 
     steps:
       - name: Checkout oaknut repo
@@ -15,8 +15,8 @@ jobs:
       - name: Install dependencies
         run: >
           sudo apt-get install -q -y
-          gcc-10-aarch64-linux-gnu
-          g++-10-aarch64-linux-gnu
+          gcc-14-aarch64-linux-gnu
+          g++-14-aarch64-linux-gnu
           ninja-build
           qemu-user
 
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: qemu/qemu
-          ref: v9.1.0
+          ref: v9.2.0
           path: externals/qemu
 
       - name: Build qemu
@@ -40,13 +40,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: catchorg/Catch2
-          ref: v3.7.0
+          ref: v3.7.1
           path: externals/catch
 
       - name: Configure CMake
         env:
-          CC: aarch64-linux-gnu-gcc-10
-          CXX: aarch64-linux-gnu-g++-10
+          CC: aarch64-linux-gnu-gcc-14
+          CXX: aarch64-linux-gnu-g++-14
         run: >
           cmake
           -B ${{github.workspace}}/build
@@ -63,7 +63,7 @@ jobs:
         run: ../externals/qemu/build/qemu-aarch64 -L /usr/aarch64-linux-gnu ./oaknut-tests -d yes
 
   test_on_windows:
-    runs-on: windows-latest
+    runs-on: windows-2025
     name: msvc-arm64
 
     steps:
@@ -74,7 +74,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: catchorg/Catch2
-          ref: v3.7.0
+          ref: v3.7.1
           path: externals/catch
 
       - name: Setup msvc-arm64 environment
@@ -94,7 +94,7 @@ jobs:
         run: cmake --build . --config Release
 
   test_on_macos:
-    runs-on: macos-latest
+    runs-on: macos-15
     name: macos-arm64
 
     steps:
@@ -105,7 +105,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: catchorg/Catch2
-          ref: v3.7.0
+          ref: v3.7.1
           path: externals/catch
 
       - name: Install dependencies
@@ -133,11 +133,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build and Test
-        uses: cross-platform-actions/action@v0.25.0
+        uses: cross-platform-actions/action@v0.26.0
         with:
           operating_system: freebsd
           architecture: arm64
-          version: '14.1'
+          version: '14.2'
           shell: bash
           run: |
             pwd
@@ -157,11 +157,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build and Test
-        uses: cross-platform-actions/action@v0.25.0
+        uses: cross-platform-actions/action@v0.26.0
         with:
           operating_system: openbsd
           architecture: arm64
-          version: '7.5'
+          version: '7.6'
           shell: bash
           run: |
             pwd
@@ -189,7 +189,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: catchorg/Catch2
-          ref: v3.7.0
+          ref: v3.7.1
           path: externals/catch
 
       - name: Configure CMake
@@ -226,7 +226,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: catchorg/Catch2
-          ref: v3.7.0
+          ref: v3.7.1
           path: externals/catch
 
       - name: Configure CMake
